// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button with some emoji 1`] = `
<button
  className="red"
  onClick={[Function]}
>
  😀 😎 👍 💯
</button>
`;

exports[`Storyshots Button with text 1`] = `
<button
  className="red"
  onClick={[Function]}
>
  Hello Button
</button>
`;

exports[`Storyshots Container default 1`] = `
<div>
  <button
    className="red"
  >
    Test
  </button>
</div>
`;
